--- a/src/pages/projects/schedule/css/csSogong_Schedule.css
+++ b/src/pages/projects/schedule/css/csSogong_Schedule.css
@@ -482,7 +482,7 @@ body {
 
 /* 2번: 게시판 나열 */
 .GaeSiPan_list {
-    display: none;
+    display: block;
 
     position: absolute;
     transform: translate(-50%, 0%);
@@ -500,10 +500,9 @@ body {
     margin: 0;
     padding: 20px;
 }
-
-.GaeSiPan_list.on {
+/* .GaeSiPan_list.on {
     display: block;
-}
+} */
 
 #GaeSiPan_list_title {
     position: absolute;
@@ -555,16 +554,15 @@ body {
     /* border-bottom: 1px solid rgb(0, 0, 0, 0.2); */
     position: relative;
 }
-
 .post_item::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: -0.44rem;
-    height: 1px;
-    background-color: rgba(0, 0, 0, 0.2);
-    transform: translateY(100%);
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: -0.44rem; /* 컨테이너 바닥에 붙음 */
+  height: 1px;
+  background-color: rgba(0, 0, 0, 0.2);
+  transform: translateY(100%); /* 패딩 바깥쪽으로 내리기 */
 }
 
 .post_item:hover {
@@ -589,7 +587,6 @@ body {
     white-space: nowrap;
     text-overflow: ellipsis;
 }
-
 .post_title.RED_title {
     color: rgb(225, 0, 0);
 }
@@ -690,8 +687,7 @@ body {
     position: relative;
     width: 45px;
     height: inherit;
-    /* border: 2px solid black;
-    border-radius: 5px; */
+    color: rgb(0, 0, 0);
 
     display: flex;
     align-items: center;
@@ -756,6 +752,7 @@ body {
     border-radius: 2.5px;
     margin: 0;
     padding: 0;
+    color: rgb(0, 0, 0);
 }
 
 #exit_write p {
@@ -776,7 +773,7 @@ body {
     margin-bottom: 1rem;
 }
 
-.form-label {
+.form_label {
     display: block;
     font-size: 0.875rem;
     font-weight: 500;
@@ -784,31 +781,33 @@ body {
     margin-bottom: 0.25rem;
 }
 
-.form-input,
-.form-textarea {
+.form_input,
+.form_textarea {
     width: 100%;
     border: 1px solid #d1d5db;
     padding: 0.75rem;
     border-radius: 8px;
     transition: border-color 0.2s;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
 
-.form-input:focus,
-.form-textarea:focus {
+.form_input:focus,
+.form_textarea:focus {
     outline: none;
     border-color: #4b5563;
 }
 
-.form-textarea {
+.form_textarea {
     resize: vertical;
 }
 
-.checkbox-container {
+.checkbox_container {
     display: flex;
     align-items: center;
 }
 
-.checkbox-label {
+.checkbox_label {
     margin-left: 0.5rem;
     display: block;
     font-size: 0.875rem;
@@ -816,7 +815,7 @@ body {
     user-select: none;
 }
 
-.form-file-input::-webkit-file-upload-button {
+.form_file_input::-webkit-file-upload-button {
     margin-right: 1rem;
     padding: 0.5rem 1rem;
     border: 0;
@@ -828,11 +827,11 @@ body {
     cursor: pointer;
 }
 
-.form-file-input::-webkit-file-upload-button:hover {
+.form_file_input::-webkit-file-upload-button:hover {
     background-color: #e0e7ff;
 }
 
-.button-container {
+.button_container {
     display: flex;
     justify-content: flex-end;
 }
@@ -938,7 +937,6 @@ body {
     left: 50%;
     top: 1000px;
     width: 1600px;
-    height: 1200px;
     border: 2px solid black;
     border-radius: 12px;
     background-color: white;
@@ -956,12 +954,49 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    color: rgb(0, 0, 0);
 
     position: absolute;
     right: 30px;
     top: 15px;
     width: 20px;
     height: 20px;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 2.5px;
+    margin: 0;
+    padding: 0;
+}
+#edit_See {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: rgb(0, 0, 0);
+
+    position: absolute;
+    right: 80px;
+    top: 15px;
+    width: 75px;
+    height: 30px;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 2.5px;
+    margin: 0;
+    padding: 0;
+}
+#delete_See {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: rgb(0, 0, 0);
+
+    position: absolute;
+    right: 180px;
+    top: 15px;
+    width: 75px;
+    height: 30px;
     background-color: rgb(255, 255, 255);
     border: 1px solid rgb(0, 0, 0);
     border-radius: 2.5px;
@@ -978,24 +1013,23 @@ body {
 
 .GSPS_field {
     display: flex;
-    margin-bottom: 1rem;
+    margin: 1rem;
+    border-radius: 0.5rem;
 }
-
 .GSPS_download_field {
     display: flex;
     flex-direction: column;
-    margin-bottom: 1rem;
+    margin: 1rem;
     border: 1.5px solid rgb(0, 0, 0);
+    border-radius: 0.5rem;
     width: 33%;
 }
-
 #GSPS_download_title {
     margin: 1rem;
     font-size: 1rem;
     font-weight: bold;
     color: rgb(0, 0, 0);
 }
-
 .GSPS_download_mode {
     cursor: pointer;
 
@@ -1006,7 +1040,8 @@ body {
     width: 80%;
     border: 1px solid rgb(0, 0, 0);
     border-radius: 5px;
-    background-color: rgb(0, 0, 0, 0.2);
+    background-color: rgba(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
 
 #GSPS_title {
@@ -1018,7 +1053,6 @@ body {
     border: 1px solid rgb(0, 0, 0);
     border: 2px;
 }
-
 #GSPS_file {
     width: 100px;
     height: 50px;
@@ -1030,11 +1064,12 @@ body {
     align-items: center;
     justify-content: center;
 }
-
 #GSPS_content {
     padding: 1rem 1.5rem;
     width: 1500px;
     border: 1px solid rgb(0, 0, 0);
+    border-radius: 0.5rem;
+    color: rgb(0, 0, 0);
 }
 
 
@@ -1046,16 +1081,19 @@ body {
 
 
 /* 7-2 번: 투표하는 화면 */
+.VOTE_container {
+    display: flex;
+    flex-direction: row;
+}
+
 .VOTE_Page {
-    position: absolute;
+    display: block;
+    flex-direction: column;
     width: 600px;
-    left: 100px;
-    top: 1300px;
+    margin: 1rem;
 
     border: 1px solid rgb(0, 0, 0);
     border-radius: 4px;
-    display: block;
-    flex-direction: column;
     padding: 20px;
 }
 
@@ -1065,24 +1103,26 @@ body {
     margin-bottom: 1rem;
     color: rgb(0, 0, 0);
 }
-
 #VOTE_isitMulti {
     display: block;
     font-size: 16px;
     margin-bottom: 0.25rem;
+    color: rgb(0, 0, 0);
 }
-
 #VOTE_isitSecret {
     display: block;
     font-size: 16px;
     margin-bottom: 0.5rem;
+    color: rgb(0, 0, 0);
 }
 
 .VOTE_item {
-    border: 1px solid rgb(0, 0, 0);
     border-radius: 0.5rem;
     margin: 1.5rem auto;
     padding: 1rem;
+    border: 1px solid rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
 
 .VOTE_complete_button {
@@ -1102,24 +1142,20 @@ body {
 /* 7-3 번: 투표 결과 화면 */
 .VOTE_Result {
     display: none;
-    z-index: 1;
-
-    position: absolute;
+    flex-direction: column;
     width: 600px;
-    left: 800px;
-    top: 1300px;
+    margin: 1rem;
+    z-index: 1;
 
     border: 1px solid rgb(0, 0, 0);
     border-radius: 4px;
-    flex-direction: column;
     padding: 20px;
 }
-
 .VOTE_Result.on {
     display: block;
 }
 
-.exit_VOTE_Result {
+/* .exit_VOTE_Result {
     cursor: pointer;
 
     position: absolute;
@@ -1132,7 +1168,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-}
+} */
 
 #VoteResult_title {
     font-size: 1.5rem;
@@ -1146,6 +1182,7 @@ body {
     border-radius: 0.5rem;
     margin: 1.5rem auto;
     padding: 1rem;
+    color: rgb(0, 0, 0);
 
     position: relative;
 }
@@ -1173,7 +1210,6 @@ body {
     flex-direction: column;
     align-items: center;
 }
-
 .VoteResult_item_WhoVoted.on {
     display: flex;
 }
@@ -1215,7 +1251,6 @@ body {
     padding: 20px;
     z-index: 3;
 }
-
 .VOTE_Make.on {
     display: block;
 }
@@ -1224,14 +1259,16 @@ body {
     cursor: pointer;
 
     position: absolute;
-    right: 20px;
-    top: 10px;
-    width: 25px;
-    height: 25px;
+    right: 30px;
+    top: 15px;
+    width: 20px;
+    height: 20px;
+    background-color: rgb(255, 255, 255);
     border: 1px solid rgb(0, 0, 0);
-    border-radius: 0.5rem;
-    align-items: center;
-    justify-content: center;
+    border-radius: 2.5px;
+    margin: 0;
+    padding: 0;
+    color: rgb(0, 0, 0);
 }
 
 #VoTeMake_Top {
@@ -1255,14 +1292,23 @@ body {
 }
 
 .VoteMake_item input[type="text"] {
+    display: block;
     width: 90%;
     padding: 10px;
     border: 1px solid #d1d5db;
     border-radius: 8px;
     transition: all 0.2s;
     box-sizing: border-box;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 
     margin-bottom: 5px;
+}
+
+.VoteMake_OptionContainer_one {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 #VoteMake_AddOption {
@@ -1274,21 +1320,22 @@ body {
     color: rgb(255, 255, 255);
     background-color: #33A1E0;
 }
-
 #VoteMake_DeleteOption {
     cursor: pointer;
-
-    width: 20px;
-    height: 20px;
     background-color: rgb(255, 255, 255);
     border: 1px solid rgb(0, 0, 0);
     color: rgb(0, 0, 0);
-    border-radius: 0.25rem;
-    display: inline-block;
+    border-radius: 100%;
+
+    display: inline-flex;
     align-items: center;
     justify-content: center;
-    margin-left: 10px;
-    top: 50%;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    padding: 0;
+    line-height: 1;
+    margin-left: 7.5px;
 }
 
 .VoteMake_item input[type="date"],
@@ -1299,6 +1346,8 @@ body {
     border-radius: 8px;
     transition: all 0.2s;
     box-sizing: border-box;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
 
 .VoteMake_item input[type="text"]:focus,
