투표 생성 중 선택지 항목 추가 시, 추가된 항목 삭제 버튼이 입력칸 오른쪽에 안 뜨던 버그를 수정

--- a/src/pages/projects/schedule/css/csSogong_Board.css
+++ b/src/pages/projects/schedule/css/csSogong_Board.css
@@ -810,6 +810,7 @@
 }
 
 .VoteMake_item input[type="text"] {
+    display: block;
     width: 90%;
     padding: 10px;
     border: 1px solid #d1d5db;
@@ -820,6 +821,12 @@
     color: rgb(0, 0, 0);
 
     margin-bottom: 5px;
+}
+
+.VoteMake_OptionContainer_one {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 #VoteMake_AddOption {
@@ -833,18 +840,20 @@
 }
 #VoteMake_DeleteOption {
     cursor: pointer;
-
-    width: 20px;
-    height: 20px;
     background-color: rgb(255, 255, 255);
     border: 1px solid rgb(0, 0, 0);
     color: rgb(0, 0, 0);
-    border-radius: 0.25rem;
-    display: inline-block;
+    border-radius: 100%;
+
+    display: inline-flex;
     align-items: center;
     justify-content: center;
-    margin-left: 10px;
-    top: 50%;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    padding: 0;
+    line-height: 1;
+    margin-left: 7.5px;
 }
 
 .VoteMake_item input[type="date"],
