--- a/src/pages/NotFound.css
+++ b/src/pages/NotFound.css
@@ -31,6 +31,12 @@
   margin-bottom: 10px;
 }
 
+.error-title {
+  font-size: 70px;
+  font-weight: 900;
+  margin-bottom: 20px;
+}
+
 .message {
   margin-bottom: 20px;
 }
@@ -45,16 +51,17 @@
 .not-found-container .dashboard-link {
   padding: 10px 15px;
   font-size: 1.2rem;
-  background-color: #ffffff;
-  border-color: #ffffff;
+  font-weight: 550;
+  background-color: #33a1e0;
+  color: #f8f8f8;
   border-radius: 5px;
-  transition: background-color 0.5s, color 0.5s;
+  transition: background-color 0.2s, color 0.2s;
   cursor: pointer;
 }
 
 .not-found-container .dashboard-link:hover {
-  color: #f8f8f8;
-  background-color: #0056b3;
+  color: #ffffff;
+  background-color: #288ac3ff;
 }
 
 .Error-logo {
