--- a/src/pages/projects/schedule/css/csSogong_Schedule.css
+++ b/src/pages/projects/schedule/css/csSogong_Schedule.css
@@ -1,24 +1,108 @@
+/* 기본 배치 및 애니메이션 */
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    box-sizing: border-box;
+    font-size: 100%;
+    vertical-align: baseline;
+}
+
+html,
+body {
+    display: block;
+    font-size: 100%;
+    text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+    background-color: rgb(255, 255, 255);
+
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+        "Noto Sans KR", "Apple SD Gothic Neo", "Malgun Gothic", "Helvetica Neue",
+        Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    padding-top: 0;
+}
+
+#root {
+    position: relative;
+    min-height: 100vh;
+}
+
+/* header {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100px;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 3;
+}
+
+#logo_header {
+    position: fixed;
+    transform: translate(0, 0);
+    left: 30px;
+    top: 10px;
+} */
+
+/* #switch_1 {
+    cursor: pointer;
+
+    position: absolute;
+    transform: translate(0, -50%);
+    left: 200px;
+    top: 50%;
+    width: 90px;
+    height: 30px;
+    text-align: center;
+    border-radius: 2px;
+    background-color: white;
+    color: rgb(0, 0, 0);
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+
+#switch_2 {
+    cursor: pointer;
+
+    position: absolute;
+    transform: translate(0, -50%);
+    left: 320px;
+    top: 50%;
+    width: 90px;
+    height: 30px;
+    text-align: center;
+    border-radius: 2px;
+    background-color: white;
+    color: rgb(0, 0, 0);
+    align-items: center;
+    justify-content: center;
+    display: flex;
+} */
+
+
+
 /* ========================================================================= */
 /* 0번: 시간조율표 만들기 */
 .TimeSelect_make {
     display: block;
-
     position: absolute;
     transform: translate(-50%, 0);
     left: 50%;
-    top: 70px;
+    top: 10px;
+    bottom: 10px;
     width: 1600px;
-    height: 800px;
+    height: auto; 
+
     background-color: #FAFAFA;
     border: 2px solid rgb(0, 0, 0);
     border-radius: 15px;
-    align-items: center;
-    justify-content: center;
     z-index: 5;
-
     padding: 2rem;
-
     padding-top: 100px;
+    overflow-y: auto; 
 }
 .TimeSelect_make.off {
     display: none;
@@ -146,13 +230,14 @@
 /* 1번: 시간조율 */
 .TimeSelect {
     display: none;
-
     position: absolute;
     transform: translate(-50%, 0);
     left: 50%;
-    top: 70px;
+    top: 10px;
+    bottom: 10px;
     width: 1600px;
-    height: 800px;
+    height: auto;
+    
     border: 2px solid rgb(0, 0, 0);
     border-radius: 20px;
     background-color: rgb(255, 255, 255);
