--- a/src/pages/projects/project/ProjectSetting.css
+++ b/src/pages/projects/project/ProjectSetting.css
@@ -297,7 +297,7 @@
   filter: brightness(0) saturate(100%) invert(56%) sepia(89%) saturate(370%) hue-rotate(76deg) brightness(110%) contrast(90%);
 }
 
-/* 하단 버튼 */
+/* 삭제 및 나가기 버튼 */
 .ps-delete-btn,
 .ps-leave-btn {
   display: flex;
