--- a/src/pages/projects/schedule/css/csSogong_Board.css
+++ b/src/pages/projects/schedule/css/csSogong_Board.css
@@ -207,6 +207,7 @@
     flex-direction: row;
 }
 
+/* 게시글 검색 관련 */
 .GSP_search_container {
     margin-left: auto;
     margin-right: 50px;
@@ -214,6 +215,16 @@
 
     display: flex;
     flex-direction: row;
+}
+
+.GSP_search_select {
+    height: 37.5px;
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 0.5rem;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    margin: 10px;
+    padding: 0 8px;
 }
 
 #GSP_search_box {
